@@ -35,10 +35,11 @@ public class CommandActionListener implements ActionListener
     private static final String cmdReplace          = "Search&Replace";
     private static final String cmdDiff             = "Compare (Diff)";
     private static final String cmdSmartVersions    = "Smart Path Versioning";
+    private static final String cmdSmartRenaming    = "Smart Renaming";
     private static final String cmdPSEditor         = "Edit Prescales";
-    private static final String cmdSPSEditor         = "Edit SmartPrescales";
+    private static final String cmdSPSEditor        = "Edit SmartPrescales";
     private static final String cmdMLEditor         = "Edit MessageLogger";
-    private static final String cmdUPEditor           = "Add Untracked Parameter";
+    private static final String cmdUPEditor         = "Add Untracked Parameter";
 
     private static final String cmdTrack            = "Track InputTags";
     
@@ -78,18 +79,19 @@ public class CommandActionListener implements ActionListener
 	if (command.equals(cmdReplace))          app.searchAndReplace();
 	if (command.equals(cmdDiff))             app.diffConfigurations();
 	if (command.equals(cmdSmartVersions))    app.smartVersionsConfigurations();
+	if (command.equals(cmdSmartRenaming))    app.smartRenamingConfigurations();
 	if (command.equals(cmdPSEditor))         app.openPrescaleEditor();
-	if (command.equals(cmdSPSEditor))         app.openSmartPrescaleEditor();
+	if (command.equals(cmdSPSEditor))        app.openSmartPrescaleEditor();
 	if (command.equals(cmdMLEditor))         app.openMessageLoggerEditor();
 	if (command.equals(cmdUPEditor))         app.addUntrackedParameter();
 	
-	if (command.equals(cmdTrack)) app.setOptionTrackInputTags(source.
-								  isSelected());
+	if (command.equals(cmdTrack))            app.setOptionTrackInputTags(source.
+									     isSelected());
 
 	if (command.equals(cmdConnectToDB))      app.connectToDatabase();
 	if (command.equals(cmdDisconnectFromDB)) app.disconnectFromDatabase();
 	if (command.equals(cmdExportConfig))     app.exportConfiguration();
-	if (command.equals(cmdOpenOldScehma))  app.importConfigurationFromDBV1();
+	if (command.equals(cmdOpenOldScehma))    app.importConfigurationFromDBV1();
     }
 
 }
